<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CommentsStoreFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="1dp"
        android:src="@drawable/logo_acuenta2"
        android:layout_marginStart="80dp"
        android:scaleType="centerCrop"

        />

    <TextView
        android:id="@+id/deja_comentario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="70dp"
        android:text="@string/Comentario"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
            android:id="@+id/id_comments"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:gravity="center"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@id/nombre"
            app:layout_constraintTop_toBottomOf="@id/deja_comentario" />

    <TextView
        android:id="@+id/labelNombre"
        android:layout_height="@dimen/default_margin"
        android:layout_width="80dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/deja_comentario"
        app:layout_constraintTop_toBottomOf="@id/id_comment_layout"
        android:text="@string/Nombre"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_comment_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/RadioButton"
        app:boxCornerRadiusBottomStart="@dimen/RadioButton"
        app:boxCornerRadiusTopEnd="@dimen/RadioButton"
        app:boxCornerRadiusTopStart="@dimen/RadioButton"

        app:counterEnabled="false"
        app:counterMaxLength="10"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/labelNombre"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@id/deja_comentario"
        app:layout_constraintTop_toBottomOf="@id/id_comments">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/id_comment_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/id_comments"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/RadioButton"
        app:boxCornerRadiusBottomStart="@dimen/RadioButton"
        app:boxCornerRadiusTopEnd="@dimen/RadioButton"
        app:boxCornerRadiusTopStart="@dimen/RadioButton"

        app:counterEnabled="false"
        app:counterMaxLength="10"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/labelNombre"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@id/deja_comentario"
        app:layout_constraintTop_toBottomOf="@id/labelNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelFecha"
        android:layout_height="@dimen/default_margin"
        android:layout_width="80dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/nombre"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        android:text="@string/Fecha"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fecha_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/RadioButton"
        app:boxCornerRadiusBottomStart="@dimen/RadioButton"
        app:boxCornerRadiusTopEnd="@dimen/RadioButton"
        app:boxCornerRadiusTopStart="@dimen/RadioButton"
        app:counterEnabled="false"
        app:counterMaxLength="10"
        android:hint="DD/MM/YY"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/labelFecha"
        app:layout_constraintEnd_toEndOf="@id/deja_comentario"
        app:layout_constraintTop_toBottomOf="@id/labelFecha"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fecha_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelComentario"
        android:layout_height="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@id/deja_comentario"
        app:layout_constraintTop_toBottomOf="@id/asunto_layout"
        android:text="@string/Comentario"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/asunto"
        android:layout_height="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@id/deja_comentario"
        app:layout_constraintTop_toBottomOf="@id/fecha_layout"
        android:text="@string/Asunto"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comentario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="100dp"
        android:layout_width="0dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/RadioButton"
        app:boxCornerRadiusBottomStart="@dimen/RadioButton"
        app:boxCornerRadiusTopEnd="@dimen/RadioButton"
        app:boxCornerRadiusTopStart="@dimen/RadioButton"
        app:counterEnabled="false"
        app:counterMaxLength="10"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/fecha_layout"

        app:layout_constraintEnd_toEndOf="@id/deja_comentario"
        app:layout_constraintTop_toBottomOf="@id/labelComentario"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/asunto_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/RadioButton"
            app:boxCornerRadiusBottomStart="@dimen/RadioButton"
            app:boxCornerRadiusTopEnd="@dimen/RadioButton"
            app:boxCornerRadiusTopStart="@dimen/RadioButton"
            app:counterEnabled="false"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="@id/fecha_layout"
            app:layout_constraintEnd_toEndOf="@id/deja_comentario"
            app:layout_constraintTop_toBottomOf="@id/asunto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/asunto_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="center"/>

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comentario"

        android:layout_marginVertical="26dp"
        android:layout_marginHorizontal="80dp"
        android:text="@string/enviar"
        android:textColor="@color/black"

        app:cornerRadius="25dp"
        android:textStyle="bold"
        android:textSize="20sp"

        />

    <ImageView
        android:id="@+id/Foto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginVertical="@dimen/default_margin"
        android:scaleType="centerCrop"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/comentario"
        android:src="@drawable/perfil"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24" />


    <TextView
        android:id="@+id/nombreDelUsuario"
        android:layout_height="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginVertical="@dimen/default_margin"
        app:layout_constraintStart_toEndOf="@id/Foto"
        app:layout_constraintTop_toBottomOf="@id/comentario"
        android:text="@string/NombreDelUsuario"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/ultimaConexion"
        android:layout_height="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintStart_toEndOf="@id/Foto"
        app:layout_constraintBottom_toBottomOf="@id/Foto"
        android:text="@string/UltimaConexion"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/asunto1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@id/Foto"
        app:layout_constraintTop_toBottomOf="@id/Foto"
        android:text="@string/Asunto1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/comentario1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin"
        android:text="@string/Comentario1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/asunto1"
        app:layout_constraintTop_toBottomOf="@id/asunto1" />


    <ImageView
        android:id="@+id/Foto2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginVertical="@dimen/default_margin"
        android:scaleType="centerCrop"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/comentario1"
        android:src="@drawable/perfil"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24" />


    <TextView
        android:id="@+id/nombreDelUsuario2"
        android:layout_height="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginVertical="@dimen/default_margin"
        app:layout_constraintStart_toEndOf="@id/Foto2"
        app:layout_constraintTop_toBottomOf="@id/comentario1"
        android:text="@string/NombreDelUsuario2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/ultimaConexion2"
        android:layout_height="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintStart_toEndOf="@id/Foto2"
        app:layout_constraintBottom_toBottomOf="@id/Foto2"
        android:text="@string/UltimaConexion2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/asunto2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@id/Foto2"
        app:layout_constraintTop_toBottomOf="@id/Foto2"
        android:text="@string/Asunto2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/comentario2"
        android:layout_height="wrap_content"
        android:layout_width="350dp"
        android:textSize="16sp"
        android:layout_marginVertical="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@id/asunto2"
        app:layout_constraintTop_toBottomOf="@id/asunto2"
        android:text="@string/Comentario2"
        android:textColor="@color/black"
        android:textStyle="bold"

        />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ellipse1"
        tools:layout_editor_absoluteX="-7dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ellipse2"
        tools:layout_editor_absoluteX="312dp"
        tools:layout_editor_absoluteY="645dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ellipse3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        android:src="@drawable/ellipse4"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="250dp" />


</androidx.constraintlayout.widget.ConstraintLayout>